--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- google font -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <!--End google font -->
+    <link rel="stylesheet" href="style.css">
     <title>AS 001</title>
 </head>
-<body>
-    
+
+<body class="inter">
+    <!-- header -->
+    <nav class="header">
+        <img src="./assets/logo-navbar.png" alt="">
+        <ul>
+            <li>Features</li>
+            <li>How It Works</li>
+            <li>How It Works</li>
+        </ul>
+        <button type="submit">Get Early Access</button>
+    </nav>
+    <!-- End header -->
+
+    <!-- banner start -->
+    <div class="banner">
+        <div class="hero-section">
+        <button type="button">Early Access Now Open</button>
+        <h1 class="h1">Structured Thinking,</h1>
+        <h1 class="h2">Not Just Note-taking.</h1>
+        <p>
+            A private space to store notes, links, and learning summaries — designed to <br>
+            help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            <div>
+                <button type="button">Start Building Your Vault</button>
+                <button type="button">See How It Works</button>
+            </div>
+            </div>
+    </div>
+    <!--End banner start -->
+
 </body>
+
 </html>
