card section strat now

--- a/index.html
+++ b/index.html
@@ -30,20 +30,31 @@
 
     <!-- banner start -->
     <div class="banner">
-        <div class="hero-section">
-        <button type="button">Early Access Now Open</button>
-        <h1 class="h1">Structured Thinking,</h1>
-        <h1 class="h2">Not Just Note-taking.</h1>
-        <p>
-            A private space to store notes, links, and learning summaries — designed to <br>
-            help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
-            <div>
-                <button type="button">Start Building Your Vault</button>
-                <button type="button">See How It Works</button>
+        <div class="hero">
+            <div class="hero-section">
+                <button type="button">Early Access Now Open</button>
+                <h1 class="h1">Structured Thinking,</h1>
+                <h1 class="h2">Not Just Note-taking.</h1>
+                <p>
+                    A private space to store notes, links, and learning summaries — designed to <br>
+                    help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                <div>
+                    <button type="button">Start Building Your Vault</button>
+                    <button type="button">See How It Works</button>
+                </div>
             </div>
-            </div>
+        </div>
     </div>
     <!--End banner start -->
+    <!-- start node section -->
+     <div class="node-section">
+        <div class="node">
+            <strong>Notes don't fail, Structure does.</strong>
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+        </div>
+        <div class="card"></div>
+     </div>
+     <!-- End node section -->
 
 </body>
 
