--- a/index.html
+++ b/index.html
@@ -52,7 +52,28 @@
             <strong>Notes don't fail, Structure does.</strong>
             <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
         </div>
-        <div class="card"></div>
+        <div class="card-section">
+            <div class="card">
+                <img src="./assets/Vector.png" alt="">
+                <h2>Scattered notes</h2>
+                <p>Your ideas live in 10 different apps,<br> none of them connected.</p>
+            </div>
+            <div class="card">
+                <img src="./assets/Vector.png" alt="">
+                <h2>Scattered notes</h2>
+                <p>Your ideas live in 10 different apps,<br> none of them connected.</p>
+            </div>
+            <div class="card">
+                <img src="./assets/Vector.png" alt="">
+                <h2>Scattered notes</h2>
+                <p>Your ideas live in 10 different apps,<br> none of them connected.</p>
+            </div>
+            <div class="card">
+                <img src="./assets/Vector.png" alt="">
+                <h2>Scattered notes</h2>
+                <p>Your ideas live in 10 different apps,<br> none of them connected.</p>
+            </div>
+        </div>
      </div>
      <!-- End node section -->
 
