brain section are almost complyte

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <!--End banner start -->
     <!-- start node section -->
-     <div class="node-section">
+    <div class="node-section">
         <div class="node">
             <strong>Notes don't fail, Structure does.</strong>
             <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
@@ -74,8 +74,30 @@
                 <p>Your ideas live in 10 different apps,<br> none of them connected.</p>
             </div>
         </div>
-     </div>
-     <!-- End node section -->
+    </div>
+    <!-- End node section -->
+    <!-- brian section -->
+
+    <!--End brian section -->
+    <div class="brian-section">
+        <div class="bimg">
+            <img src="./assets/knowledge.png" alt="">
+        </div>
+        <div class="brain-contain">
+            <p>The Solution</p>
+            <strong>Your second brain,
+                structured by design.</strong>
+            <p>Personal Knowledge Vault isn't another note-taking app. Z <br> It's a thinking environment where every
+                note, link, and summary <br> becomes part of an interconnected web of understanding.
+            </p>
+            <div class="pitem">
+            <p>Capture ideas with structure built-in from day one</p>
+            <p>Connect related concepts automatically as you write</p>
+            <p>Build lasting knowledge through reflection prompts</p>
+            <p>Find anything instantly with semantic search</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 
