--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
     <!--End google font -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>AS 001</title>
 </head>
@@ -24,26 +27,28 @@
             <li>How It Works</li>
             <li>How It Works</li>
         </ul>
-        <button type="submit">Get Early Access</button>
+        <button class="btn" type="submit">Get Early Access</button>
     </nav>
     <!-- End header -->
 
     <!-- banner start -->
     <div class="banner">
-        <div class="hero">
-            <div class="hero-section">
-                <button type="button">Early Access Now Open</button>
-                <h1 class="h1">Structured Thinking,</h1>
-                <h1 class="h2">Not Just Note-taking.</h1>
-                <p>
-                    A private space to store notes, links, and learning summaries — designed to <br>
-                    help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
-                <div>
-                    <button type="button">Start Building Your Vault</button>
-                    <button type="button">See How It Works</button>
-                </div>
+        <div class="hero-section">
+            <div class="hs">
+                <h3> <i class="fa-regular fa-circle-dot"></i> Early Access Now Open</h3>
+            </div>
+            <h1 class="h1">Structured Thinking,</h1>
+            <h1 class="h2">Not Just Note-taking.</h1>
+            <p>
+                A private space to store notes, links, and learning summaries — designed to <br>
+                help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            <div>
+                <button class="btn" type="button">Start Building Your Vault <i
+                        class="fa-solid fa-arrow-right"></i></button>
+                <button class="btn" type="button"><i class="fa-solid fa-play"></i> See How It Works</button>
             </div>
         </div>
+
     </div>
     <!--End banner start -->
     <!-- start node section -->
@@ -59,26 +64,25 @@
                 <p>Your ideas live in 10 different apps,<br> none of them connected.</p>
             </div>
             <div class="card">
-                <img src="./assets/Vector.png" alt="">
-                <h2>Scattered notes</h2>
-                <p>Your ideas live in 10 different apps,<br> none of them connected.</p>
+                <img src="./assets/Bookmarks.png" alt="">
+                <h2>Bookmark overload</h2>
+                <p>Hundreds of saved links you'll never revisit or remember.</p>
             </div>
             <div class="card">
-                <img src="./assets/Vector.png" alt="">
-                <h2>Scattered notes</h2>
-                <p>Your ideas live in 10 different apps,<br> none of them connected.</p>
+                <img src="./assets/Brain.png" alt="">
+                <h2>No idea connections</h2>
+                <p>Insights stay isolated, never building into bigger understanding.</p>
             </div>
             <div class="card">
-                <img src="./assets/Vector.png" alt="">
-                <h2>Scattered notes</h2>
-                <p>Your ideas live in 10 different apps,<br> none of them connected.</p>
+                <img src="./assets/Info.png" alt="">
+                <h2>Forgetting what
+                    you learned</h2>
+                <p>knowledge fades because there's no system to retain it.</p>
             </div>
         </div>
     </div>
     <!-- End node section -->
     <!-- brian section -->
-
-    <!--End brian section -->
     <div class="brian-section">
         <div class="bimg">
             <img src="./assets/knowledge.png" alt="">
@@ -91,13 +95,40 @@
                 note, link, and summary <br> becomes part of an interconnected web of understanding.
             </p>
             <div class="pitem">
-            <p>Capture ideas with structure built-in from day one</p>
-            <p>Connect related concepts automatically as you write</p>
-            <p>Build lasting knowledge through reflection prompts</p>
-            <p>Find anything instantly with semantic search</p>
+                <p>Capture ideas with structure built-in from day one</p>
+                <p>Connect related concepts automatically as you write</p>
+                <p>Build lasting knowledge through reflection prompts</p>
+                <p>Find anything instantly with semantic search</p>
             </div>
         </div>
     </div>
+    <!--End brian section -->
+    <!-- Early Access Section  -->
+    <div class="early-access">
+        <strong>Ready to think more clearly?</strong>
+        <button class="btn" type="button">Get Early Access <i class="fa-solid fa-arrow-right"></i></button>
+        <p>Free during early access • No credit card needed</p>
+    </div>
+    <!--End Early Access Section  -->
+    <!-- footer  -->
+    <div class="footer">
+        <div class="footer-section">
+            <img src="./assets/logo-footer.png" alt="">
+            <div class="social-link"></div>
+            <p>Social Links</p>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-threads"></i>
+            <wa-icon name="facebook" family="brands"></wa-icon>
+        </div>
+        <div class="footer-line">
+
+        </div>
+        <div class="end-footer">
+            <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
+        </div>
+    </div>
+    <!-- End footer  -->
 
 </body>
 
