--- a/index.html
+++ b/index.html
@@ -88,17 +88,16 @@
             <img src="./assets/knowledge.png" alt="">
         </div>
         <div class="brain-contain">
-            <p>The Solution</p>
-            <strong>Your second brain,
-                structured by design.</strong>
+            <p class="bp">The Solution</p>
+            <strong>Your second brain,<br>structured by design.</strong>
             <p>Personal Knowledge Vault isn't another note-taking app. Z <br> It's a thinking environment where every
                 note, link, and summary <br> becomes part of an interconnected web of understanding.
             </p>
             <div class="pitem">
-                <p>Capture ideas with structure built-in from day one</p>
-                <p>Connect related concepts automatically as you write</p>
-                <p>Build lasting knowledge through reflection prompts</p>
-                <p>Find anything instantly with semantic search</p>
+                <p><img src="./assets/CheckCircle.png" alt=""> Capture ideas with structure built-in from day one</p>
+                <p><img src="./assets/CheckCircle.png" alt=""> Connect related concepts automatically as you write</p>
+                <p><img src="./assets/CheckCircle.png" alt=""> Build lasting knowledge through reflection prompts</p>
+                <p><img src="./assets/CheckCircle.png" alt=""> Find anything instantly with semantic search</p>
             </div>
         </div>
     </div>
