--- a/index.html
+++ b/index.html
@@ -34,19 +34,17 @@
     <!-- banner start -->
     <div class="banner">
         <div class="hero-section">
-            <div class="hs">
-                <h3> <i class="fa-regular fa-circle-dot"></i> Early Access Now Open</h3>
-            </div>
-            <h1 class="h1">Structured Thinking,</h1>
-            <h1 class="h2">Not Just Note-taking.</h1>
-            <p>
-                A private space to store notes, links, and learning summaries — designed to <br>
-                help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
-            <div>
-                <button class="btn" type="button">Start Building Your Vault <i
-                        class="fa-solid fa-arrow-right"></i></button>
-                <button class="btn" type="button"><i class="fa-solid fa-play"></i> See How It Works</button>
-            </div>
+            <h6> <i class="fa-regular fa-circle-dot"></i> Early Access Now Open<h6>
+                    <h1 class="h1">Structured Thinking,</h1>
+                    <h1 class="h2">Not Just Note-taking.</h1>
+                    <p>
+                        A private space to store notes, links, and learning summaries — designed to <br>
+                        help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                    <div>
+                        <button class="btn" type="button">Start Building Your Vault <i
+                                class="fa-solid fa-arrow-right"></i></button>
+                        <button class="btn-t" type="button"><i class="fa-solid fa-play"></i> See How It Works</button>
+                    </div>
         </div>
 
     </div>
@@ -114,14 +112,12 @@
         <div class="footer-section">
             <img src="./assets/logo-footer.png" alt="">
             <div class="social-link"></div>
-            <p>Social Links</p>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-threads"></i>
-            <wa-icon name="facebook" family="brands"></wa-icon>
+            <p>Social Links <br> <br> <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-threads"></i>
+            </p>
         </div>
         <div class="footer-line">
-
         </div>
         <div class="end-footer">
             <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
